--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ layout: default
 
 <div class="home">
 
-  <h1>Posts</h1>
-
+  <h1> {{site.description}}</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li>
