[ADD] missing files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: default
 <div class="home">
 
   <h1> {{site.description}}</h1>
+  <img class="mainLogo" src="assets/qddCycle.jpg" />
   <ul class="posts">
     {% for post in site.posts %}
           {% include postPreview.html post=post %}
