--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@ layout: default
 ---
 
 <div class="home">
-
   <h1> {{site.description}}</h1>
-  <img class="mainLogo" src="assets/qddCycle.jpg" />
-  <ul class="posts">
-    {% for post in site.posts %}
-          {% include postPreview.html post=post %}
-    {% endfor %}
-  </ul>
-
-
+  <div class='container'>
+      <ul class="posts">
+        {% for post in site.posts %}
+              {% include postPreview.html post=post %}
+        {% endfor %}
+      </ul>
+  </div>
 </div>
+
