[DEL] removing site.description from index template

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-  <h1> {{site.description}}</h1>
+  <!--<h1> {{site.description}}</h1>-->
   <div class='container'>
       {% include postList.html %}
   </div>
